# oramacore-client-rust

./: Cargo.toml  README.md  clippy.toml  justfile  rustfmt.toml
.github/workflows/: ci.yml
examples/: ai_session.rs  basic_search.rs  document_management.rs  server_app.rs
src/: auth.rs  client.rs  cloud.rs  collection.rs  error.rs  lib.rs  manager.rs  stream_manager.rs  types.rs  utils.rs
tests/: integration_tests.rs
tests/common/: mod.rs
